--- a/temalabor_drkeseruklaudia/package.json
+++ b/temalabor_drkeseruklaudia/package.json
@@ -6,9 +6,16 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.23.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
+    "react-router-hash-link": "^2.4.3",
+    "react-router-hashlink": "^0.6.0",
     "react-scripts": "4.0.3",
+    "react-vertical-timeline-component": "^3.5.2",
+    "sass": "^1.43.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
