--- a/temalabor_drkeseruklaudia/package.json
+++ b/temalabor_drkeseruklaudia/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.23.0",
     "framer-motion": "^4.1.17",
+    "i18next": "^21.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
