--- a/temalabor_drkeseruklaudia/package.json
+++ b/temalabor_drkeseruklaudia/package.json
@@ -7,10 +7,15 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "framer-motion": "^4.1.17",
-    "i18next": "^21.4.0",
+    "i18next": "^21.5.1",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-http-backend": "^1.3.1",
     "react": "^17.0.2",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.14.2",
     "react-icons": "^4.3.1",
+    "react-reveal": "^1.2.2",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
