--- a/temalabor_drkeseruklaudia/package.json
+++ b/temalabor_drkeseruklaudia/package.json
@@ -21,7 +21,10 @@
     "react-scripts": "^5.0.1",
     "react-vertical-timeline-component": "^3.5.2",
     "styled-components": "^5.3.5",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "loader-utils": ">=3.2.1",
+    "minimatch": ">=3.0.5",
+    "nth-check": ">=2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
